# DZCCompiler

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: ascii_string.h  compiler.h  core_types.h  vector.h
src/: compiler.c  cprocess.c  lexer.c  main.c  node.c  parser.c  symbol_resolution.c
src/lexer/: lexer.c
src/parser/: node.c  parser.c
src/symbol_resolution/: symbol_resolution.c
